--- a/composer.json
+++ b/composer.json
@@ -4,12 +4,22 @@
       "psr-4": {"PhpstanMockeryFinals\\":  "src"}
   },
   "require": {
-    "doctrine/collections": "^1.6"
+    "nette/utils": "^3.1",
+    "symfony/validator": "^5.1",
+    "doctrine/orm": "^2.7"
   },
   "require-dev": {
-    "phpstan/phpstan": "^0.12.18"
+    "brandembassy/coding-standard": "^8.1",
+    "mockery/mockery": "^1.3",
+    "phpunit/phpunit": "^8.5",
+    "dg/bypass-finals": "^1.2"
   },
   "scripts": {
-    "phpstan": "vendor/bin/phpstan analyse -l max src"
+    "phpstan-analyze": "vendor/bin/phpstan analyse --memory-limit=-1",
+    "phpstan-clear-cache": "vendor/bin/phpstan clear-result-cache",
+    "phpstan": [
+      "@composer phpstan-clear-cache",
+      "@composer phpstan-analyze"
+    ]
   }
 }
