--- a/composer.json
+++ b/composer.json
@@ -3,13 +3,23 @@
   "autoload": {
       "psr-4": {"PhpstanMockeryFinals\\":  "src"}
   },
+  "require": {
+    "nette/utils": "^3.1",
+    "symfony/validator": "^5.1",
+    "doctrine/orm": "^2.7"
+  },
   "require-dev": {
     "brandembassy/coding-standard": "^8.1",
-    "dg/bypass-finals": "^1.1",
-    "phpunit/phpunit": "^8.0",
-    "mockery/mockery": "^1.3"
+    "mockery/mockery": "^1.3",
+    "phpunit/phpunit": "^8.5",
+    "dg/bypass-finals": "^1.2"
   },
   "scripts": {
-    "phpstan": "vendor/bin/phpstan analyse -c phpstan.neon src -a autoload.php"
+    "phpstan-analyze": "vendor/bin/phpstan analyse --memory-limit=-1",
+    "phpstan-clear-cache": "vendor/bin/phpstan clear-result-cache",
+    "phpstan": [
+      "@composer phpstan-clear-cache",
+      "@composer phpstan-analyze"
+    ]
   }
 }
